# rust-backend-api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migration/src/: lib.rs
src/: main.rs
src/domain/: mod.rs
src/domain/entities/: profile_photo.rs  user.rs  user_preferences.rs  verification.rs
src/domain/enums/: user_role.rs
src/domain/migration/: mod.rs  profile_photo_migration.rs  user_migration.rs  user_preferences_migration.rs  verification_migration.rs
src/domain/repositories/: mod.rs  profile_photo_repository.rs  user_preferences_repository.rs  user_repository.rs  verification_repository.rs
src/domain/services/: auth_service.rs  mod.rs  user_service.rs  verification_service.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: redis_client.rs
src/infrastructure/config/: mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/database/entities/: mod.rs  profile_photo.rs  user.rs  user_preferences.rs  verification.rs
src/infrastructure/database/repositories_impl/: mod.rs  profile_photo_repository_impl.rs  user_preferences_repository_impl.rs  user_repository_impl.rs  verification_repository_impl.rs
src/infrastructure/mailer/: mail_client.rs
src/infrastructure/messaging/: mod.rs  rabbitmq_client.rs
src/infrastructure/storage/: minio_client.rs  mod.rs
src/interface/controllers/: auth_controller.rs  mod.rs  user_controller.rs  verification_controller.rs
src/interface/dto/: auth_dto.rs  mod.rs  user_dto.rs  verification_dto.rs
src/interface/routes/: mod.rs
