[package]
name = "simple-backend-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sea-orm = { version = "0.11", features = ["sqlx-mysql", "runtime-tokio-native-tls"] }
redis = { version = "0.27.2", features = ["tokio-comp"] }
lapin = { version = "2.5", features = ["native-tls"] }
minio-rsc = "0.2.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
jsonwebtoken = "9.3.0"
async-trait = "0.1"
bcrypt = "0.15.1"
lettre = "0.11.9"
reqwest = { version = "0.12.7", features = ["json", "multipart", "default-tls"] }
sea-orm-migration = { version = "0.11", features = ["sqlx-mysql"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }